# freally-snipper

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  EULA.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  build.rs
app/assets/icons/: README.md
app/src/: app.rs  audio.rs  audio_out.rs  autostart.rs  delivery.rs  editor.rs  export.rs  fvid_reader.rs  gallery.rs  hotkey.rs  main.rs  output.rs  overlay.rs  player.rs  print_screen.rs  recorder.rs  settings.rs  timeline.rs  tray.rs  webcam.rs
app/wix/: main.wxs
crates/asr/: Cargo.toml
crates/asr/src/: lib.rs
crates/capture/: Cargo.toml
crates/capture/examples/: save_monitors.rs
crates/capture/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: download.rs  emoji.rs  filters.rs  fonts.rs  lib.rs  models.rs  objects.rs  ocr.rs  raster.rs  text.rs  transforms.rs  translate.rs
crates/freally-font/: Cargo.toml
crates/freally-font/glyphs/: 0030.glyph  0031.glyph  0032.glyph  0033.glyph  0034.glyph  0035.glyph  0036.glyph  0037.glyph  0038.glyph  0039.glyph  0041.glyph  0042.glyph  0043.glyph  0044.glyph  0045.glyph  0046.glyph  0047.glyph  0048.glyph  0049.glyph  004A.glyph  004B.glyph  004C.glyph  004D.glyph  004E.glyph  004F.glyph  0050.glyph  0051.glyph  0052.glyph  0053.glyph  0054.glyph  0055.glyph  0056.glyph  0057.glyph  0058.glyph  0059.glyph  005A.glyph  0061.glyph  0062.glyph  0063.glyph  0064.glyph  (+22 more)
crates/freally-font/src/: lib.rs  main.rs
crates/timeline/: Cargo.toml
crates/timeline/src/: compositor.rs  lib.rs  provider.rs
crates/video/: Cargo.toml
crates/video/src/: bitio.rs  bytes.rs  huffman.rs  inter.rs  intra.rs  lib.rs  pack.rs  rle.rs  stream.rs
docs/: index.html
locales/ar/: snipper.ftl
locales/de/: snipper.ftl
locales/en/: snipper.ftl
locales/es/: snipper.ftl
locales/fr/: snipper.ftl
locales/hi/: snipper.ftl
locales/id/: snipper.ftl
locales/it/: snipper.ftl
locales/ja/: snipper.ftl
locales/ko/: snipper.ftl
locales/nl/: snipper.ftl
locales/pl/: snipper.ftl
locales/pt-BR/: snipper.ftl
locales/ru/: snipper.ftl
locales/tr/: snipper.ftl
locales/uk/: snipper.ftl
locales/vi/: snipper.ftl
locales/zh-CN/: snipper.ftl
