[workspace]
resolver = "2"
members = [
    "app",
    "crates/capture",
    "crates/editor",
    "crates/asr",
    "crates/video",
]

# Shared package metadata, inherited by every member via `field.workspace = true`.
[workspace.package]
version = "0.45.0"
edition = "2021"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
license-file = "LICENSE"

# "Fast + small": optimize and shrink release builds.
[profile.release]
opt-level = 3
lto = "thin"
strip = true
