[package]
name = "freally-snipper"
description = "Free, local-first, cross-platform screen capture + image & light video editor."
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
publish = false

[dependencies]
freally-capture = { path = "../crates/capture" }
freally-editor = { path = "../crates/editor" }
directories = "6.0.0"
eframe = "0.34.3"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
global-hotkey = "0.8.0"
arboard = "3.6.1"
rfd = "0.17.2"
opener = "0.7.2"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }

# Windows-only: free the Print Screen key from the built-in Snipping Tool (P1.5),
# via the safe `winreg` wrapper so the crate stays `#![forbid(unsafe_code)]`.
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

# Windows-only build dependency: embed the app icon into the .exe so Explorer and
# the taskbar show it (see build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Windows + macOS: system-tray icon so the app can keep running (and keep serving
# the global hotkey / Print Screen) while its window is closed. Linux tray needs a
# GTK loop that conflicts with our winit backend — deferred to Phase 7.
[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
tray-icon = "0.19.3"

# --- Packaging (cargo-bundle): `cargo install cargo-bundle` then `cargo bundle --release` ---
[package.metadata.bundle]
name = "Freally Snipper"
identifier = "com.havoc-software.freally-snipper"
icon = ["assets/Freally_Snipper_Icon_Light.png"]
category = "Utility"
short_description = "Free screen capture + image & light video editor."
long_description = """
Freally Snipper is a free, local-first, privacy-respecting screen capture tool with a built-in
image editor and a light video editor for Windows, macOS, and Linux. No accounts, no cloud, no
telemetry.
"""
copyright = "Copyright (c) 2026 Mike Weaver. All Rights Reserved."
