[package]
name = "freally-snipper"
description = "Free, local-first, cross-platform screen capture + image & light video editor."
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
publish = false

[dependencies]
freally-capture = { path = "../crates/capture" }
freally-editor = { path = "../crates/editor" }
freally-video = { path = "../crates/video" }
freally-timeline = { path = "../crates/timeline" }
directories = "6.0.0"
eframe = "0.34.3"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "gif",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
global-hotkey = "0.8.0"
arboard = "3.6.1"
# System/loopback + mic audio capture for screen recording (P5.2). Optional,
# clearly-labeled, behind the audio module; graceful fallback when unavailable.
cpal = "0.15.3"
# Webcam capture for the recording PiP (P5.2), behind the webcam module; native
# per-OS backend (MediaFoundation / AVFoundation / V4L2). Graceful fallback.
nokhwa = { version = "0.10", features = ["input-native"] }
# Optional, non-owned video EXPORT (P5.1) — runs ffmpeg as a SEPARATE subprocess
# (no linking, so the proprietary app stays at arm's length from ffmpeg's
# GPL/LGPL; only the standalone binary carries that license). WebM is royalty-free;
# MP4/H.264 is patent-pooled (owner accepts). GIF export is in-process (no ffmpeg).
ffmpeg-sidecar = "2.0"
rfd = "0.17.2"
opener = "0.7.2"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }

# Windows-only: free the Print Screen key from the built-in Snipping Tool (P1.5),
# via the safe `winreg` wrapper so the crate stays `#![forbid(unsafe_code)]`.
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

# Windows-only build dependency: embed the app icon into the .exe so Explorer and
# the taskbar show it (see build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Windows + macOS: system-tray icon so the app can keep running (and keep serving
# the global hotkey / Print Screen) while its window is closed. Linux tray needs a
# GTK loop that conflicts with our winit backend — deferred to Phase 7.
[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
tray-icon = "0.19.3"

# --- Packaging (cargo-bundle): `cargo install cargo-bundle` then `cargo bundle --release` ---
[package.metadata.bundle]
name = "Freally Snipper"
identifier = "com.havoc-software.freally-snipper"
icon = ["assets/Freally_Snipper_Icon_Light.png"]
category = "Utility"
short_description = "Free screen capture + image & light video editor."
long_description = """
Freally Snipper is a free, local-first, privacy-respecting screen capture tool with a built-in
image editor and a light video editor for Windows, macOS, and Linux. No accounts, no cloud, no
telemetry.
"""
copyright = "Copyright (c) 2026 Mike Weaver. All Rights Reserved."
