[package]
name = "freally-asr"
description = "Optional local speech-to-text + caption translation for Freally Snipper. Placeholder for Phase 6."
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
publish = false

# Internal library — not a shippable artifact; only the `freally-snipper` binary
# is packaged by cargo-dist.
[package.metadata.dist]
dist = false

[dependencies]
